# cppSwitchboard

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE  README.md  TESTING.md  development-rules.md  generate_docs.sh
cmake/: cppSwitchboard.pc.in  cppSwitchboardConfig.cmake.in  rpm_post_install.sh  rpm_post_uninstall.sh
docs/: GENERATION_REPORT.txt  api_metadata.yaml  index.html  pandoc.yaml
docs/combined/: main_ascii.md  main_clean.md
docs/markdown/: API_REFERENCE.md  ARCHITECTURE.md  ASYNC_PROGRAMMING.md  CONFIGURATION.md  CONTRIBUTING.md  DEPLOYMENT.md  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  MIDDLEWARE.md  MIDDLEWARE_TUTORIAL.md  PERFORMANCE.md  PLUGIN_DEVELOPMENT.md  TROUBLESHOOTING.md  TUTORIALS.md
examples/: CMakeLists.txt  auth_example.cpp  basic_server.cpp  custom_middleware.cpp  middleware_example.cpp
examples/plugins/compression_middleware/: CMakeLists.txt  compression_middleware.cpp  compression_middleware.h
include/cppSwitchboard/: async_middleware.h  config.h  debug_logger.h  http2_server_impl.h  http_handler.h  http_request.h  http_response.h  http_server.h  middleware.h  middleware_config.h  middleware_factory.h  middleware_pipeline.h  middleware_plugin.h  plugin_manager.h  route_registry.h
include/cppSwitchboard/middleware/: auth_middleware.h  authz_middleware.h  cors_middleware.h  logging_middleware.h  rate_limit_middleware.h
src/: async_middleware.cpp  config.cpp  debug_logger.cpp  http2_server_impl.cpp  http_handler.cpp  http_request.cpp  http_response.cpp  http_server.cpp  middleware.cpp  middleware_config.cpp  middleware_factory.cpp  middleware_pipeline.cpp  middleware_plugin.cpp  plugin_manager.cpp  route_registry.cpp
src/middleware/: auth_middleware.cpp  authz_middleware.cpp  cors_middleware.cpp  logging_middleware.cpp  rate_limit_middleware.cpp
tasks/: tasklist-document.md  tasklist-features.md  tasklist-improve-001.md
tests/: CMakeLists.txt  test_async_middleware.cpp  test_auth_middleware.cpp  test_authz_middleware.cpp  test_config.cpp  test_cors_middleware.cpp  test_debug_logger.cpp  test_http_request.cpp  test_http_response.cpp  test_integration.cpp  test_logging_middleware.cpp  test_middleware.cpp  test_middleware_config.cpp  test_middleware_factory.cpp  test_middleware_pipeline.cpp  test_plugin_system.cpp  test_rate_limit_middleware.cpp  test_route_registry.cpp
